--- a/ui-development/package.json
+++ b/ui-development/package.json
@@ -14,10 +14,11 @@
     "svelte": "~3.19.0"
   },
   "dependencies": {
+    "fs-extra": "^8.1.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && node move-package.js",
     "dev:rollup": "rollup -c -w",
     "dev:livereload": "cross-env LIVERELOAD=1 rollup -c -w",
     "dev:nollup": "cross-env NOLLUP=1 nollup -c --hot --port 5000 --content-base ./public",
